--- a/aboutgroup.html
+++ b/aboutgroup.html
@@ -45,7 +45,6 @@
     }
 
     #title {
-        background-color: #001B1C;
         color: #F6F6F6;
     }
 
@@ -64,9 +63,7 @@
   <body>
 
 <!-- Navigation -->
-<div id="body" class="container-fluid">
-
-        <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
+    <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
             <div class="container-fluid w-75">
                 <a class="navbar-brand" href="#"><img src="img/frontpage/logo/logo.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
@@ -93,26 +90,29 @@
                 </div>
             </div>
         </nav>
+<div class="loggedInBG container-fluid">
+
+        
 
 <div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
   <div class="row xs-12 text-left font-weight-bold">
     <div class="col">
    
 
-      <div id="mainContainer" class="container px-3 rounded mb-4">
+      <div id="" class="container px-3 rounded mb-4">
         <div class="row xs-12 text-left font-weight-bold">
-          <div id="title" class="col text-center py-3 mb-3">
-            group name
+          <div class="col text-center py-3 mb-3">
+            <h1 id="title">Group Name</h1>
                 </div>
           </div>
           <div class="container">
               <div class="row">
                 <div class="col-sm-12 col-md-5 mx-auto">
-                    <img class="mr-2 mb-3 rounded mx-auto d-block img-fluid img-thumbnail" src="group1.jpg" alt="group picture 1">
+                    <img class="mr-2 mb-3 rounded mx-auto d-block img-fluid img-thumbnail" src="img/aboutgroup/groupimg.jpeg" alt="group picture 1">
                 </div>
                 <div id="maintext" class="col-sm-12 col-md-7 mb-4">
-                  <h1>description</h1>
-                  number of members
+                  <h2>Description</h2>
+                  <h3>Number of Members</h3>
                   <br>
                   budget
                 </div>
@@ -154,14 +154,6 @@
                 </div>
               </div>
               </div>
-     
-
-
-
-
-
-
-
         </div>
       </div>
     </div>
