--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
                 </div>
             </div>
 </nav>
-<div class="container-fluid">
-
-
-
-<!--- Image Slider -->
-<div id="slideshow" class="carousel mx-auto slide col-lg-9 col-md-10 col-sm-11 col-xs-12" data-ride="carousel">
+  <!--- Image Slider -->
+<div id="slideshow" class="carousel mx-auto slide " data-ride="carousel">
     <ul class="carousel-indicators">
         <li data-target="#slideshow" data-slide-to="0" class="active"></li>
         <li data-target="#slideshow" data-slide-to="1"></li>
@@ -79,38 +75,36 @@
         
     </div>
     </div>
-        <!--- Jumbotron -->
-<div class="container-fluid ">
-        <div class="row jumbotron text-center">
+          <!--- Jumbotron -->
+        <div class="textcenter jumbotron">
             <h2>Memento</h2>
+
             <p class="lead">An event generating service which allows individuals and groups to contribute to a pot and enjoy local activities together.</p>
         </div>
-    </div>
-</div>
 
 
 
 <div class="container col-lg-9 col-md-10 col-sm-11 col-xs-12">
         <div class="row">
-          <div class="col-4">
+          <div class="col-12 col-md-4">
                 <div class="card border-0">
-                        <img class="card-img-top mx-auto" src="img/frontpage/icon/social.png" alt="Create memories with loved ones">
+                        <img class="icons card-img-top mx-auto" src="img/frontpage/icon/social.png" alt="Create memories with loved ones">
                         <div class="card-body">
                             <h5 class="card-title text-center">Get Together</h5>
                         </div>
                     </div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
                 <div class="card border-0">
-                        <img class="card-img-top mx-auto" src="img/frontpage/icon/recycling.png" alt="Recycling and reduce waste">
+                        <img class="icons card-img-top mx-auto" src="img/frontpage/icon/recycling.png" alt="Recycling and reduce waste">
                         <div class="card-body">
                             <h5 class="card-title text-center">Reduce Waste</h5>
                         </div>
                     </div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
                 <div class="card border-0">
-                        <img class="card-img-top mx-auto" src="img/frontpage/icon/local.png" alt="Support small local businesses">
+                        <img class="icons card-img-top mx-auto" src="img/frontpage/icon/local.png" alt="Support small local businesses">
                         <div class="card-body">
                             <h5 class="card-title text-center">Support Local Economy</h5>
                         </div>
@@ -119,7 +113,6 @@
                 
           </div>
         </div>
-      </div>
 
 
 
@@ -128,7 +121,7 @@
 
 <!--- Two Column Section -->
 <div class="row m-4 mx-auto col-lg-9 col-md-10 col-sm-11 col-xs-12">
-    <div class="col xs-12 lg-8 text-center">
+    <div class="textcenter col xs-12 lg-8">
         <h2>Mission statement<small><br></small></h2>
         <p>While gift giving is well intentioned, we often miss the point: to create lasting memories with other people. 24% of all people believe most of the gifts they receive are useless junk. 
             Each year, Canadians will throw out 540,000 tonnes of wrapping paper and gift bags.
