--- a/mygroups.html
+++ b/mygroups.html
@@ -43,7 +43,6 @@
     }
 
     #title {
-        background-color: #001B1C;
         color: #F6F6F6;
     }
 
@@ -53,9 +52,7 @@
   <body>
 
 <!-- Navigation -->
-<div id="body" class="container-fluid">
-
-        <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
+     <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
             <div class="container-fluid w-75">
                 <a class="navbar-brand" href="#"><img src="img/frontpage/logo/logo.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
@@ -82,6 +79,10 @@
                 </div>
             </div>
         </nav>
+<div class="loggedInBG">
+  <div id="body" class="container-fluid">
+
+       
 
 <div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
   <div class="row xs-12 text-left font-weight-bold">
@@ -89,7 +90,7 @@
    
 
       <!-- signup form -->
-      <div id="mainContainer" class="container px-3 rounded">
+      <div class="container px-3 rounded mb-4">
         <div class="row xs-12 text-left font-weight-bold">
           <div id="title" class="col text-center py-3 mb-3">
             My Groups
@@ -101,7 +102,7 @@
 
                 <div id="firstGroup" class="row xs-12 mx-2 mb-3">
               <li class="media">
-                <img class="mr-2 mb-3" src="cult.jpg" alt="group picture 1">
+                <img class="mr-2 mb-3" src="img/mygroups/satan.jpeg" alt="group picture 1">
                 <div class="media-body">
                   <h4 class="mt-0 mb-1">satan worship cult</h4>
                   saving up money so we can summon the dark lord himself!
@@ -110,7 +111,7 @@
             </div>
             <div id="secondGroup" class="row xs-12 mx-2 mb-3">
               <li class="media">
-                <img class="mr-2 mb-3" src="seawall.jpg" alt="group picture 1">
+                <img class="mr-2 mb-3" src="img/mygroups/seawall.jpeg" alt="group picture 1">
                 <div class="media-body">
                   <h4 class="mt-0 mb-1">family</h4>
                   rent bikes to go around seawall
@@ -133,13 +134,15 @@
     </div>
   </div>
 </div>
+    </div>
+
 
 
 
 
 <!--- Footer -->
 <div>
-        <footer class="site-footer page-footer font-small pt-3 mt-4">
+        <footer class="site-footer page-footer font-small pt-3">
             <div class="container-fluid text-center my-auto">
                 <div class="row">
                     <div class="col-md-12">
