--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@
    
 
       <!-- signup form -->
-      <div id="formContainer" class="container pt-2 px-3 rounded mb-4">
+      <div class="container pt-2 px-3 rounded mb-4">
         <div class="row xs-12 text-left font-weight-bold">
           <div id="form" class="col text-center px-3 py-3">
             Sign up
