--- a/index.html
+++ b/index.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Memento</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<link href="style.css" rel="stylesheet">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <link href="style.css" rel="stylesheet">
+  <title>about group</title>
+
 </head>
+  
 <body>
 
 <!-- Navigation -->
-   <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
-            <div class="container-fluid w-75">
-                <a class="navbar-brand" href="#"><img src="img/frontpage/logo/logo.png"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTop">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active mt-1">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item mt-1">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item mt-1">
-                            <a class="nav-link" href="#">Sponsors</a>
-                        </li>
-                        <li class="nav-item mt-1">
-                            <a class="nav-link" href="#">Connect</a>
-                        </li>
-                        <li class="nav-item mt-1">
-                            <a class="nav-link" href="#">Groups</a>
-                        </li>
-                        <li class="nav-item">
-                            <button type="button" onclick="construction()" class="btn btn-primary btn-lg signin">Sign In</button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+<nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
+  <div class="container-fluid w-75">
+    <a class="navbar-brand" href="#"><img src="img/frontpage/logo/logo.png"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collase" data-target="#navbarTop">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTop">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active mt-1">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item mt-1">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item mt-1">
+          <a class="nav-link" href="#">Sponsors</a>
+        </li>
+        <li class="nav-item mt-1">
+          <a class="nav-link" href="#">Connect</a>
+        </li>
+        <li class="nav-item">
+          <button type="button" onclick="construction()" class="btn btn-primary btn-lg signin">Sign In</button>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
   <!--- Image Slider -->
 <div id="slideshow" class="carousel mx-auto slide " data-ride="carousel">
@@ -139,36 +141,20 @@
 </div>
 
 <!--- Footer -->
-<div></div>
-        <footer class="site-footer page-footer font-small pt-3 mt-4">
-            <div class="container-fluid text-center my-auto">
-                <div class="row">
-                    <div class="col-md-12 mt-">
-                        <h5>links</h5><pre><a href="#">About</a>    <a href="#">Sponsors</a>    <a href="#">Connect</a>
-                      </pre>
-                        <!-- <ul class="list-unstyled">
-                            <li>
-                                <a href="#!">About</a>
-                            </li>
-                            <li>
-                                <a href="#!">Contact</a>
-                            </li>
-                            <li>
-                                <a href="#!">Sponsors</a>
-                            </li>
-                            <li>
-                                <a href="#!"></a>
-                            </li>
-                        </ul> -->
-                    </div>
-                </div>
-            </div>
-        
-            <div id="copyright" class="pt-1 text-center">
-                2018 &copy; Team Five
-            </div>
-        
-        </footer>
+<footer class="site-footer page-footer font-small pt-3">
+  <div class="container-fluid text-center my-auto">
+    <div class="row">
+      <div class="col-md-12">
+        <h5>links</h5>
+        <pre>   <a href="#">About</a>    <a href="#">Sponsors    </a>   <a href="#">Connect</a>
+        </pre>
+      </div>
+    </div>
+  </div>
+  <div id="copyright" class="pt-1 text-center">
+      2018 &copy; Team Five
+  </div>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
