no more spaghetti code

--- a/mygroups.html
+++ b/mygroups.html
@@ -43,27 +43,22 @@
   </div>
 </nav>
 <div class="loggedInBG">
-  <div id="body" class="container-fluid">
-
-       
+  
+<div class="container-fluid">
 
 <div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
   <div class="row xs-12 text-left font-weight-bold">
     <div class="col">
-   
-
       <!-- signup form -->
       <div class="container px-3 rounded mb-4">
         <div class="row xs-12 text-left font-weight-bold">
           <div id="title" class="col text-center py-3 mb-3">
             My Groups
-                </div>
           </div>
-
-          <div id="content" class="row xs-12">
+        </div>
+        <div id="content" class="row xs-12">
           <ul class="list-unstyled">
-
-                <div id="firstGroup" class="row xs-12 mx-2 mb-3">
+            <div id="firstGroup" class="row xs-12 mx-2 mb-3">
               <li class="media">
                 <img class="mr-2 mb-3" src="img/mygroups/suit.jpeg" alt="group picture 1">
                 <div class="media-body">
@@ -79,25 +74,16 @@
                   <h4 class="mt-0 mb-1">Family</h4>
                   <p>Rent bikes to go around seawall</p>
                 </div>
-            </li>
-                </div>
-  
-            </ul>
-</div>
-
-
-
-
-
-
-
-
+              </li>
+            </div>
+          </ul>
         </div>
       </div>
     </div>
   </div>
 </div>
-    </div>
+</div>
+</div>
 
 
 
