--- a/createjoin.html
+++ b/createjoin.html
@@ -44,18 +44,21 @@
 </nav>
 
 <header class="masthead d-flex">
-      <div class="container text-center my-auto">
-        <h1 class="mb-5 createheading">Create a Memento</h1>
-        <div class="row">
-          <div class="col-12 col-md-4 my-2"><button type="button" onclick="location.href = 'create.html'" class="btn btn-primary btn-lg createjoin" style="background-color: #FFF; color: #1A75C1;">Create Group</button></div>
-          <div class="col-12 col-md-4 my-2"><button type="button" onclick="location.href = 'join.html'" class="btn btn-light btn-lg createjoin" style="background-color: #1A75C1; color: #FFF;">Join Group</button></div>
-          <div class="col-12 col-md-4 my-2"><button type="button" onclick="location.href = 'mygroups.html'" class="btn btn-primary btn-lg createjoin" style="background-color: #FFF; color: #1A75C1;">My Groups</button></div>
-        
+  <div class="container text-center my-auto">
+    <h1 class="mb-5 createheading">Create a Memento</h1>
+      <div class="row">
+        <div class="col-12 col-md-4 my-2">
+          <button type="button" onclick="location.href = 'create.html'" class="btn btn-primary btn-lg createjoin" style="background-color: #FFF; color: #1A75C1;">Create Group</button>
+        </div>
+        <div class="col-12 col-md-4 my-2">
+          <button type="button" onclick="location.href = 'join.html'" class="btn btn-light btn-lg createjoin" style="background-color: #1A75C1; color: #FFF;">Join Group</button>
+        </div>
+        <div class="col-12 col-md-4 my-2">
+          <button type="button" onclick="location.href = 'mygroups.html'" class="btn btn-primary btn-lg createjoin" style="background-color: #FFF; color: #1A75C1;">My Groups</button>
+        </div>
       </div>
   </div>
 </header>
-
-    
 
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
