added comments and cleaned up html/css

--- a/join.html
+++ b/join.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet">
-  <title>about group</title>
+  <title>Join a group</title>
 
 </head>
   
@@ -43,10 +43,11 @@
   </div>
 </nav>
   
-
+<!-- background div -->
 <div class="loggedInBG container-fluid">
 
-<div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
+  <!-- main div container -->
+<div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4 title">
   <div class="row xs-12 text-left font-weight-bold">
     <div class="col">
       <!-- signup form -->
@@ -71,6 +72,7 @@
   </div>
 </div>
 </div>
+
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
   <div class="container-fluid text-center my-auto">
