--- a/mygroups.html
+++ b/mygroups.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet">
-  <title>about group</title>
+  <title>My groups</title>
 
 </head>
   
@@ -42,11 +42,13 @@
     </div>
   </div>
 </nav>
-<div class="loggedInBG">
-  
-<div class="container-fluid">
 
-<div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
+<!-- background div -->
+<div class="loggedInBG">
+
+<!-- main div container -->
+<div class="container-fluid">
+<div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4 title">
   <div class="row xs-12 text-left font-weight-bold">
     <div class="col">
       <!-- signup form -->
