--- a/aboutgroup.html
+++ b/aboutgroup.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet">
-  <title>about group</title>
+  <title>Group name</title>
 
 </head>
   
@@ -43,16 +43,20 @@
   </div>
 </nav>
   
-<div class="loggedInBG container-fluid">      
+
+<!-- background div -->
+<div class="loggedInBG container-fluid">  
+  <!-- main container div -->
   <div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
     <div class="row xs-12 text-left font-weight-bold">
       <div class="col">
         <div id="" class="container px-3 rounded mb-4">
-          <div class="row xs-12 text-left font-weight-bold">
+          <div class="row xs-12 text-left font-weight-bold title">
             <div class="col text-center py-3 mb-3">
               <h1 id="title">Group Name</h1>
             </div>
           </div>
+          <!-- group description, # of members, budget -->
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-md-5 mx-auto">
@@ -66,8 +70,10 @@
               </div>
             </div>
           </div>
+          <!-- events -->
           <div class="container-fluid">
             <div class="row">
+              <!-- event 1 -->
               <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
                 <div class="card mx-auto">
                   <img class="card-img-top" src="img/aboutgroup/event.jpeg" alt="Card image cap">
@@ -77,6 +83,7 @@
                   </div>
                 </div>
               </div>
+              <!-- event 2 -->
               <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
                 <div class="card mx-auto">
                   <img class="card-img-top" src="img/aboutgroup/event.jpeg" alt="Card image cap">
@@ -86,6 +93,7 @@
                   </div>
                 </div>
               </div>
+              <!-- event 3 -->
               <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
                 <div class="card mx-auto">
                   <img class="card-img-top" src="img/aboutgroup/event.jpeg" alt="Card image cap">
