--- a/create.html
+++ b/create.html
@@ -42,12 +42,15 @@
     </div>
   </div>
 </nav>
+
+<!-- background div -->
 <div class="loggedInBG container-fluid">
-<div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
+  <!-- main container div -->
+<div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4 title">
   <div class="row xs-12 text-left font-weight-bold">
     <div class="col">
     <!-- signup form -->
-      <div id="formContainer" class="container pt-2 px-3 rounded mb-4">
+      <div class="container pt-2 px-3 rounded mb-4 createheading">
         <div class="row xs-12 text-left font-weight-bold">
           <div id="form" class="col text-center px-3 py-3">
             Create Group
