--- a/createjoin.html
+++ b/createjoin.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet">
-  <title>about group</title>
+  <title>Create or join a group</title>
 
 </head>
   
@@ -43,8 +43,10 @@
   </div>
 </nav>
 
+<!-- background -->
 <header class="masthead d-flex">
-  <div class="container text-center my-auto">
+  <!-- main div container -->
+  <div class="container text-center my-auto title">
     <h1 class="mb-5 createheading">Create a Memento</h1>
       <div class="row">
         <div class="col-12 col-md-4 my-2">
