--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet">
-  <title>about group</title>
+  <title>Memento</title>
 
 </head>
   
@@ -42,13 +42,15 @@
     </div>
   </div>
 </nav>
-  <!--- Image Slider -->
+
+  <!--- carousel image slider -->
 <div id="slideshow" class="carousel mx-auto slide " data-ride="carousel">
   <ul class="carousel-indicators">
     <li data-target="#slideshow" data-slide-to="0" class="active"></li>
     <li data-target="#slideshow" data-slide-to="1"></li>
     <li data-target="#slideshow" data-slide-to="2"></li>
   </ul>
+  <!-- first image -->
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="img/frontpage/carousel/picnic.jpeg">
@@ -58,6 +60,7 @@
             <button type="button" onclick="location.href = 'register.html'" class="btn btn-light btn-lg" style="background-color: #1A75C1; color: #FFF;">Get Started</button>
       </div>
     </div>
+    <!-- second image -->
     <div class="carousel-item">
       <img src="img/frontpage/carousel/hike.jpg">
       <div class="carousel-caption">
@@ -66,6 +69,7 @@
             <button type="button" onclick="location.href = 'register.html'" class="btn btn-light btn-lg" style="background-color: #1A75C1; color: #FFF;">Get Started</button>
       </div>
     </div>
+    <!-- third image -->
     <div class="carousel-item">
       <img src="img/frontpage/carousel/beertour.jpg">
       <div class="carousel-caption">
@@ -76,16 +80,18 @@
     </div>    
   </div>
 </div>
-<!--- Jumbotron -->
+
+<!--- Jumbotron (name and description of app) -->
 <div class="textcenter jumbotron">
   <h2>Memento</h2>
   <p class="lead">An event generating service which allows individuals and groups to contribute to a pot and enjoy local activities together.</p>
 </div>
 
 
-
+<!-- three icons (get together, reduce waste, support locals) -->
 <div class="container col-lg-9 col-md-10 col-sm-11 col-xs-12">
   <div class="row">
+    <!-- first ion -->
     <div class="col-12 col-md-4">
       <div class="card border-0">
         <img class="icons card-img-top mx-auto" src="img/frontpage/icon/social.png" alt="Create memories with loved ones">
@@ -94,6 +100,7 @@
         </div>
       </div>
     </div>
+    <!-- second icon -->
     <div class="col-12 col-md-4">
       <div class="card border-0">
         <img class="icons card-img-top mx-auto" src="img/frontpage/icon/recycling.png" alt="Recycling and reduce waste">
@@ -102,6 +109,7 @@
         </div>
       </div>
     </div>
+    <!-- third icon -->
     <div class="col-12 col-md-4">
       <div class="card border-0">
         <img class="icons card-img-top mx-auto" src="img/frontpage/icon/local.png" alt="Support small local businesses">
@@ -113,12 +121,14 @@
   </div>
 </div>
 
-<!--- Two Column Section -->
+<!--- Two Column Section (mission statement, video) -->
 <div class="row m-4 mx-auto col-lg-9 col-md-10 col-sm-11 col-xs-12">
+  <!-- mission statement -->
   <div class="textcenter col xs-12 lg-8">
     <h2>Mission statement<small><br></small></h2>
     <p>While gift giving is well intentioned, we often miss the point: to create lasting memories with other people. 24% of all people believe most of the gifts they receive are useless junk. Each year, Canadians will throw out 540,000 tonnes of wrapping paper and gift bags. Our application, Memento takes all the money a group would have spent on gift-giving, aggregates a sum from anonymous personal budgets, and turns that sum it into a memorable experience. This not only reduces waste, but also supports local businesses and brings people together.</p>
   </div>
+  <!-- video -->
   <div class="col-lg-4 mt-1">
     <br>
     <div class="embed-responsive embed-responsive-16by9">
