--- a/register.html
+++ b/register.html
@@ -42,26 +42,38 @@
     </div>
   </div>
 </nav>
+
+<!-- background div -->
 <div class="loggedInBG container-fluid">
-  <div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4">
+  <!-- main div container -->
+  <div id="main" class="container col-lg-6 col-md-7 col-sm-9 w-90 px-2 pt-4 title">
     <div class="row xs-12 text-left font-weight-bold">
       <div class="col">
         <div class="container pt-2 px-3 rounded mb-4">
           <div class="row xs-12 text-left font-weight-bold">
-            <div id="form" class="col text-center px-3 py-3">
+
+            <!-- form container -->
+            <div id="title" class="col text-center px-3 py-3">
               Sign up
             
-            <!-- form -->
+            <!-- sign up form -->
               <form method="post" action="register.php">
+                <!-- username -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                   <input type="text" name="user_Name" class="form-control" id="usernameForm" placeholder="Username">
                 </div>
+
+                <!-- password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="text" name="user_Password" class="form-control" id="passwordForm" placeholder="Password">
+                  <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password">
                 </div>
+
+                <!-- confirm password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="text" class="form-control" id="confirmpasswordForm" placeholder="Confirm password">
+                  <input type="password" class="form-control" id="confirmpasswordForm" placeholder="Confirm password">
                 </div>
+
+                <!-- email -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                   <input type="email" name="user_Email" class="form-control" id="emailForm" placeholder="Email">
                   <div class="col">
@@ -71,11 +83,16 @@
               </form>
               <br>
               <br>
+
             <!-- form for existing users -->
               <small><b>Already have an account? Sign in:</b></small>
+
+              <!-- username -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                 <input type="text" class="form-control" id="usernameForm" placeholder="Username">
               </div>
+
+              <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                 <input type="text" class="form-control" id="passwordForm" placeholder="Password">
                 <div class="col">
@@ -89,6 +106,7 @@
     </div>
   </div>
 </div>
+
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
   <div class="container-fluid text-center my-auto">
