--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
   <div class="container-fluid w-75">
     <a class="navbar-brand" href="#"><img src="img/frontpage/logo/logo.png"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collase" data-target="#navbarTop">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTop">
