fixed disappearing div on small viewports

--- a/create.html
+++ b/create.html
@@ -50,7 +50,7 @@
   <div class="row xs-12 text-left font-weight-bold">
     <div class="col">
     <!-- signup form -->
-      <div class="container pt-2 px-3 rounded mb-4 createheading">
+      <div class="container pt-2 px-3 rounded mb-4">
         <div class="row xs-12 text-left font-weight-bold">
           <div id="form" class="col text-center px-3 py-3">
             Create Group
