--- a/register.html
+++ b/register.html
@@ -88,6 +88,7 @@
               <small><b>Already have an account? Sign in:</b></small>
 
               <!-- username -->
+              <form method="post" action="register.php">
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                 <input type="text" class="form-control" id="usernameForm" placeholder="Username">
               </div>
@@ -99,6 +100,7 @@
                   <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right" onclick="location.href = 'createjoin.html'">Sign in</button>
                 </div>
               </div>
+            </form>
             </div>
           </div>
         </div>
