--- a/register.html
+++ b/register.html
@@ -95,7 +95,7 @@
 
               <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" name="user_Password" class="form-control" id="passwordForm" placeholder="Password">
+                <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password">
                 <div class="col">
                   <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Sign in</button>
                 </div>
