'about' button now takes you somewhere, added password validation script, inputs now have requirements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item mt-1">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item mt-1">
           <a class="nav-link" href="#">Sponsors</a>
@@ -83,6 +83,7 @@
 
 <!--- Jumbotron (name and description of app) -->
 <div class="textcenter jumbotron">
+  <div id="about" class="navbarOffset"></div>
   <h2>Memento</h2>
   <p class="lead">An event generating service which allows individuals and groups to contribute to a pot and enjoy local activities together.</p>
 </div>
