added link to mementoScripts to all pages

--- a/register.html
+++ b/register.html
@@ -60,19 +60,19 @@
               <form method="post" action="register.php">
                 <!-- username -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="text" name="user_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4-20}" required >
+                  <input type="text" name="user_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
                 </div>
 
           
 
                 <!-- password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8-20}" required>
+                  <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
                 </div>
 
                 <!-- confirm password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="password" class="form-control" id="confirmpasswordForm" placeholder="Confirm password" pattern="[a-zA-Z0-9]{8-20}" oninput="check(this)" required>
+                  <input type="password" class="form-control" id="confirmpasswordForm" placeholder="Confirm password" pattern="[a-zA-Z0-9]{8,20}" oninput="check(this)" required>
                 </div>
 
                 <!-- email -->
@@ -92,12 +92,12 @@
               <!-- username -->
               <form method="post" action="signin.php">
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" name="user_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4-20}" required>
+                <input type="text" name="user_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
               </div>
 
               <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8-20}" required>
+                <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
                 <div class="col">
                   <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Sign in</button>
                 </div>
