added sick login stuff

--- a/join.html
+++ b/join.html
@@ -23,25 +23,44 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTop">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active mt-1">
+        <li class="nav-item mt-1">
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item mt-1">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="createjoin.html">Groups</a>
         </li>
         <li class="nav-item mt-1">
-          <a class="nav-link" href="#">Sponsors</a>
+          <a class="nav-link" href="#">Sign Up</a>
         </li>
         <li class="nav-item mt-1">
-          <a class="nav-link" href="#">Connect</a>
-        </li>
-        <li class="nav-item">
-          <button type="button" onclick="construction()" class="btn btn-primary btn-lg signin">Sign In</button>
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
+<!-- The Modal -->
+<div class="modal fade" id="login">
+  <div class="modal-dialog">
+    <div class="modal-content">
+    <!-- Modal Header -->
+      <div class="modal-header">
+        <h4 class="modal-title">Login</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <!-- Modal body -->
+      <div class="modal-body">
+        <form method="post" action="signin.php">
+		  <input type="text" name="user_Name" class="modaluserpw" placeholder="Username">
+		  <input type="password" name="user_Password" 
+          class="modaluserpw" placeholder="Password">
+		  <input type="submit" name="login" class="login loginmodal-submit" value="Login">
+		</form>
+      </div>
+    </div>
+  </div>
+</div>
+
   
 <!-- background div -->
 <div class="loggedInBG container-fluid">
