Changed user to User in various files for consistency with live DB so login works.

--- a/register.html
+++ b/register.html
@@ -51,8 +51,8 @@
       <!-- Modal body -->
       <div class="modal-body">
         <form method="post" action="signin.php">
-		  <input type="text" name="user_Name" class="modaluserpw" placeholder="Username">
-		  <input type="password" name="user_Password" 
+		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
+		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
 		  <input type="submit" name="login" class="login loginmodal-submit" value="Login">
 		</form>
@@ -78,14 +78,14 @@
               <form method="post" action="register.php">
                 <!-- username -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="text" name="user_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
+                  <input type="text" name="User_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
                 </div>
 
           
 
                 <!-- password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
+                  <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
                 </div>
 
                 <!-- confirm password -->
@@ -95,7 +95,7 @@
 
                 <!-- email -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="email" name="user_Email" class="form-control" id="emailForm" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
+                  <input type="email" name="User_Email" class="form-control" id="emailForm" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
                   <div class="col">
                     <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
                   </div>
@@ -110,12 +110,12 @@
               <!-- username -->
               <form method="post" action="signin.php">
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" name="user_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
+                <input type="text" name="User_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
               </div>
 
               <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="password" name="user_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
+                <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
                 <div class="col">
                   <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Sign in</button>
                 </div>
