--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <!-- Modal body -->
       <div class="modal-body">
         <form method="post" action="signin.php">
-		  <input type="text" name="user_Name" class="modaluserpw" placeholder="Username">
-		  <input type="password" name="user_Password" 
+		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
+		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
 		  <input type="submit" name="login" class="login loginmodal-submit" value="Login">
 		</form>
