added 'autofocus' and 'required' attributes for forms

--- a/create.html
+++ b/create.html
@@ -77,7 +77,7 @@
             <!-- form -->
             <form>
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" class="form-control" id="groupNameForm" placeholder="Group Name">
+                <input type="text" class="form-control" id="groupNameForm" placeholder="Group Name" required autofocus>
               </div>
             <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
