--- a/join.html
+++ b/join.html
@@ -77,10 +77,10 @@
             <!-- form -->
             <form>
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" class="form-control" id="usernameForm" placeholder="Group Name">
+                <input type="text" class="form-control" id="usernameForm" placeholder="Group Name" autofocus required>
               </div>
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="password" class="form-control" id="passwordForm" placeholder="Password">
+                <input type="password" class="form-control" id="passwordForm" placeholder="Password" required>
               </div>
               <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
             </form>
