--- a/create.html
+++ b/create.html
@@ -44,17 +44,17 @@
   <div class="modal-dialog">
     <div class="modal-content">
     <!-- Modal Header -->
-      <div class="modal-header">
+      <div class="modal-header mx-auto">
         <h4 class="modal-title">Login</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <!-- Modal body -->
-      <div class="modal-body">
+      <div class="modal-body col-6 mx-auto">
         <form method="post" action="signin.php">
-		  <input type="text" name="user_Name" class="modaluserpw" placeholder="Username">
-		  <input type="password" name="user_Password" 
+		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
+		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
-		  <input type="submit" name="login" class="login loginmodal-submit" value="Login">
+		  <input type="submit" name="login" class="login loginmodal-submit modaluserpw" value="Login">
 		</form>
       </div>
     </div>
