--- a/create.html
+++ b/create.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="createjoin.html">Groups</a>
         </li>
         <li class="nav-item mt-1">
-          <a class="nav-link" href="#">Sign Up</a>
+          <a class="nav-link" href="register.html">Sign Up</a>
         </li>
         <li class="nav-item mt-1">
           <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
