--- a/mygroups.html
+++ b/mygroups.html
@@ -8,7 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet">
-  <title>My groups</title>
+  <title>My Groups</title>
 
 </head>
   
@@ -30,7 +30,7 @@
           <a class="nav-link" href="createjoin.html">Groups</a>
         </li>
         <li class="nav-item mt-1">
-          <a class="nav-link" href="#">Sign Up</a>
+          <a class="nav-link" href="register.html">Sign Up</a>
         </li>
         <li class="nav-item mt-1">
           <a class="nav-link" href="#" data-toggle="modal" data-target="#login">Login</a>
