--- a/register.html
+++ b/register.html
@@ -129,18 +129,43 @@
 
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
-  <div class="container-fluid text-center my-auto">
+
+
+  <div class="container-fluid col-4 text-center my-auto">
+    <h4>Links</h4>
     <div class="row">
-      <div class="col-md-12">
-        <h5>links</h5>
-        <pre>   <a href="#">About</a>    <a href="#">Sponsors    </a>   <a href="#">Connect</a>
-        </pre>
+      <div class="col-4">
+        <a href="#">Home</a>
+      </div>
+      <div class="col-4">
+        <a href="#">Signup</a>
+      </div>
+      <div class="col-4">
+        <a href="#">Login</a>
+      </div>
+
+      
       </div>
     </div>
   </div>
   <div id="copyright" class="pt-1 text-center">
       2018 &copy; Team Five
   </div>
+
+  <!-- <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+    </div> -->
+
 </footer>
 
     <!-- Optional JavaScript -->
