--- a/join.html
+++ b/join.html
@@ -94,12 +94,17 @@
 
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
-  <div class="container-fluid text-center my-auto">
-    <div class="row">
-      <div class="col-md-12">
-        <h5>links</h5>
-        <pre>   <a href="#">About</a>    <a href="#">Sponsors    </a>   <a href="#">Connect</a>
-        </pre>
+  <div class="container-fluid col-4 text-center my-auto">
+    <h4>Links</h4>
+    <div class="row pb-2">
+      <div class="col-4">
+        <a href="index.html">Home</a>
+      </div>
+      <div class="col-4">
+        <a href="register.html">Signup</a>
+      </div>
+      <div class="col-4">
+        <a href="#" data-toggle="modal" data-target="#login">Login</a>
       </div>
     </div>
   </div>
