--- a/register.html
+++ b/register.html
@@ -129,43 +129,23 @@
 
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
-
-
   <div class="container-fluid col-4 text-center my-auto">
     <h4>Links</h4>
-    <div class="row">
+    <div class="row pb-2">
       <div class="col-4">
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
       </div>
       <div class="col-4">
-        <a href="#">Signup</a>
+        <a href="register.html">Signup</a>
       </div>
       <div class="col-4">
-        <a href="#">Login</a>
-      </div>
-
-      
+        <a href="#" data-toggle="modal" data-target="#login">Login</a>
       </div>
     </div>
   </div>
   <div id="copyright" class="pt-1 text-center">
       2018 &copy; Team Five
   </div>
-
-  <!-- <div class="container">
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-      </div>
-    </div> -->
-
 </footer>
 
     <!-- Optional JavaScript -->
