Added Label for number of users for creating groups.

--- a/create.html
+++ b/create.html
@@ -50,7 +50,7 @@
       </div>
       <!-- Modal body -->
       <div class="modal-body col-6 mx-auto">
-        <form method="post" action="signin.php">
+        <form method="post" action="creategroup.php">
 		  <input type="text" name="User_Name" class="modaluserpw" placeholder="Username">
 		  <input type="password" name="User_Password" 
           class="modaluserpw" placeholder="Password">
@@ -93,6 +93,7 @@
                 <input type="text" class="form-control" id="descriptionForm" placeholder="Description">
               </div>
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
+                <label>Select the group size:</label>
                 <select class="form-control" title="lol" placeholder="Number of People" id="totalPeople">
                   <option>1</option>
                   <option>2</option>
