pages span viewport height

--- a/create.html
+++ b/create.html
@@ -120,9 +120,9 @@
                   <option>23</option>
                   <option>24</option>
                 </select>
-              </div>
-              <div class="col">
+                <div class="col px-0">
                 <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
+              </div>
               </div>
             </form>
           </div>
