--- a/join.html
+++ b/join.html
@@ -61,7 +61,6 @@
   </div>
 </div>
 
-  
 <!-- background div -->
 <div class="loggedInBG container-fluid">
 
@@ -81,8 +80,11 @@
               </div>
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                 <input type="password" class="form-control" id="passwordForm" placeholder="Password" required>
+                <div class="col px-0">
+                  <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
+                </div>
               </div>
-              <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
+              
             </form>
           </div>
         </div>
@@ -112,7 +114,6 @@
       2018 &copy; Team Five
   </div>
 </footer>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
