--- a/register.html
+++ b/register.html
@@ -94,7 +94,7 @@
                 <!-- email -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                   <input type="email" name="User_Email" class="form-control" id="emailForm" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
-                  <div class="col">
+                  <div class="col px-0">
                     <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
                   </div>
                 </div>
@@ -114,7 +114,7 @@
               <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                 <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
-                <div class="col">
+                <div class="col px-0">
                   <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Sign in</button>
                 </div>
               </div>
