improved regex/validation for username and passwords

--- a/register.html
+++ b/register.html
@@ -75,27 +75,27 @@
               Sign up
             
             <!-- sign up form -->
-              <form method="post" action="register.php">
+              <form method="post" action="register.php" onsubmit="return validate();">
                 <!-- username -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="text" name="User_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" oninput="" required autofocus>
+                  <input type="text" name="User_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" oninput="checkUsername(this)" required autofocus>
                 </div>
 
                 <!-- password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
+                  <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" oninput="checkPw(this)" required>
                 </div>
 
                 <!-- confirm password -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                  <input type="password" class="form-control" id="confirmpasswordForm" placeholder="Confirm password" pattern="[a-zA-Z0-9]{8,20}" oninput="check(this)" required>
+                  <input type="password" name="confirm_User_Password" class="form-control" id="confirmpasswordForm" placeholder="Confirm password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" oninput="checkPw(this)" required>
                 </div>
 
                 <!-- email -->
                 <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
                   <input type="email" name="User_Email" class="form-control" id="emailForm" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
                   <div class="col px-0">
-                    <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Submit</button>
+                    <button type="submit" class="btn btn-primary mt-4 submitButton float-right" name="submit">Submit</button>
                   </div>
                 </div>
               </form>
@@ -108,14 +108,14 @@
               <!-- username -->
               <form method="post" action="signin.php">
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="text" name="User_Name" class="form-control" id="usernameForm" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
+                <input type="text" name="User_Name" class="form-control" id="usernameForm2" placeholder="Username" pattern="[a-zA-Z0-9]{4,20}" required>
               </div>
 
               <!-- password -->
               <div class="form-row col-xs-12 col-sm-10 col-md-10 col-lg-6 mx-auto my-4">
-                <input type="password" name="User_Password" class="form-control" id="passwordForm" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
+                <input type="password" name="User_Password" class="form-control" id="passwordForm2" placeholder="Password" pattern="[a-zA-Z0-9]{8,20}" required>
                 <div class="col px-0">
-                  <button id="submitButton" type="submit" class="btn btn-primary mt-4 float-right">Sign in</button>
+                  <button id="submitButton2" type="submit" class="btn btn-primary mt-4 submitButton float-right">Sign in</button>
                 </div>
               </div>
             </form>
