--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
   <div class="container-fluid w-75">
-    <a class="navbar-brand" href="#"><img src="img/frontpage/logo/logo.png"></a>
+    <a class="navbar-brand" href="index.html"><img src="img/frontpage/logo/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,8 +45,20 @@
     <div class="modal-content">
     <!-- Modal Header -->
       <div class="modal-header mx-auto">
-        <h4 class="modal-title">Login</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <div class="container mx-auto">
+              <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-8 text-center">
+                   <h3>
+                     Login 
+                   </h3>
+                </div>
+                <div class="col-2">
+                    <button type="button" class="close text-right" data-dismiss="modal">&times;</button>
+                </div>
+              </div>
+              </div>
       </div>
       <!-- Modal body -->
       <div class="modal-body col-6 mx-auto">
