--- a/mygroups.html
+++ b/mygroups.html
@@ -17,7 +17,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-dark sticky-top w-100" style="background-color: #1A75C1;">
   <div class="container-fluid w-75">
-    <a class="navbar-brand" href="#"><img src="img/frontpage/logo/logo.png"></a>
+    <a class="navbar-brand" href="index.html"><img src="img/frontpage/logo/logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -45,8 +45,20 @@
     <div class="modal-content">
     <!-- Modal Header -->
       <div class="modal-header mx-auto">
-        <h4 class="modal-title">Login</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <div class="container mx-auto">
+              <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-8 text-center">
+                   <h3>
+                     Login 
+                   </h3>
+                </div>
+                <div class="col-2">
+                    <button type="button" class="close text-right" data-dismiss="modal">&times;</button>
+                </div>
+              </div>
+              </div>
       </div>
       <!-- Modal body -->
       <div class="modal-body col-6 mx-auto">
@@ -56,7 +68,7 @@
           class="modaluserpw" placeholder="Password">
 		  <input type="submit" name="login" class="login loginmodal-submit modaluserpw" value="Login">
 		</form>
-      </div>
+    </div>
     </div>
   </div>
 </div>
@@ -77,25 +89,36 @@
           </div>
         </div>
         <div id="content" class="row xs-12">
-          <ul class="list-unstyled">
-            <div id="firstGroup" class="row xs-12 mx-2 mb-3">
-              <li class="media">
-                <img class="mr-2 mb-3" src="img/mygroups/suit.jpeg" alt="group picture 1">
-                <div class="media-body">
-                  <h4 class="mt-0 mb-1">Coworkers</h4>
-                  <p>Year end celebration</p>
+          <ul class="list-unstyled w-100">
+
+            <div class="clickableDiv">
+              <a href="aboutgroup.html">
+                <div id="firstGroup" class="row xs-12 mx-2">
+                  <li class="media">
+                    <img class="mr-2 mb-3" src="img/mygroups/suit.jpeg" alt="group picture 1">
+                    <div class="media-body">
+                      <h4 class="mt-0 mb-1">Coworkers</h4>
+                      <p>Year end celebration</p>
+                    </div>
+                  </li>
                 </div>
-              </li>
+              </a>
             </div>
-            <div id="secondGroup" class="row xs-12 mx-2 mb-3">
-              <li class="media">
-                <img class="mr-2 mb-3" src="img/mygroups/seawall.jpeg" alt="group picture 1">
-                <div class="media-body">
-                  <h4 class="mt-0 mb-1">Family</h4>
-                  <p>Rent bikes to go around seawall</p>
+
+            <div class="clickableDiv">
+              <a href="aboutgroup.html">
+                <div id="secondGroup" class="row xs-12 mx-2">
+                  <li class="media">
+                    <img class="mr-2 mb-3" src="img/mygroups/seawall.jpeg" alt="group picture 1">
+                    <div class="media-body">
+                      <h4 class="mt-0 mb-1">Family</h4>
+                      <p>Rent bikes to go around seawall</p>
+                    </div>
+                  </li>
                 </div>
-              </li>
+              </a>
             </div>
+
           </ul>
         </div>
       </div>
@@ -107,7 +130,7 @@
 
 <!--- Footer -->
 <footer class="site-footer page-footer font-small pt-3">
-  <div class="container-fluid col-4 text-center my-auto">
+  <div class="container-fluid col-6 col-md-3 text-center my-auto">
     <h4>Links</h4>
     <div class="row pb-2">
       <div class="col-4">
